Fix: Adjusted vertical alignment of search icon in header for improved symmetry(#28)

--- a/css-files/kissan-header.css
+++ b/css-files/kissan-header.css
@@ -30,6 +30,9 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        flex: 1; 
+        max-width:500px;
+        margin-right:35px;
         width: 100%;
         height: 100%;
         position: relative;
